Tue Aug 22 17:45:53 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Line selection works sanely now.

Tue Aug 22 04:29:18 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* More line work
	* Patch from nolan (email?) to implement image opacity. Looks
	sweet and is fast, but there is a leak we can't find in there
	somewhere, so be careful until we find it ;-)p

Tue Aug 22 01:15:40 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Big restructure of object code, made lots more functions members
	of the object class, as lines etc need to do stuff diferently.
	* Line selection boxes are now drawn at each end of the line.
	* Resizing lines *almost* works right now, but needs some tweaking
	;-)

Mon Aug 21 19:15:59 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Decent, Working XML check courtesy of Dave J (the powertweak
	guy), much better :-)
	* A line object type. Works well, but don't try and resize it,
	that code is just a stubb right now. I had to use a line clipping
	algorithm to do partial rendering right here, so everyone thank
	Cohen and Sutherland for "lending" me theirs ;-)
	* I can put the line clipping code into imlib2 if raster is
	interested, as a seperate function of course.

Sun Aug 20 01:10:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* nolan pointed out that the _object_dirty() function dirties the
	whole rendered image size, even if the object has been resized
	smaller than the rendered size. This also effects
	click-selection. Fixed now with a obj->get_rendered_area() member
	fuction. Thanks nolan :)

Fri Aug 18 00:37:25 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Check for libxml. Test whether it is installed to
	<gnome-xml/parser.h> or <libxml/parser.h> (it's the same damn lib,
	the author just got very confused about his loyalties and changed
	between one minor version and the next :/ And NO, it does not
	depend on GNOME. You need libxml1 for geist right now. libxml2
	needs a coupla bugs fixed before I switch....
