@@ -1,3 +1,12 @@
+Tue Aug 22 21:38:51 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Object dirtying now uses an update rect generated by a
+	geist_object member, so objects can define their own shapes.
+	* Updates for lines are now computed from the points on the line,
+	instead of just adding a rectangle covering the whole line as
+	before. Much faster, although the code which loops through the
+	points on the line could use some optimising I guess...
+
 Tue Aug 22 17:45:53 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Line selection works sanely now.
